feat(2): Добавить локализацию